--- a/application/views/pages/register.ejs
+++ b/application/views/pages/register.ejs
@@ -3,8 +3,8 @@
 <main>
   <div class="container">
     <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-    <h2> Login</h2>
-    <form action="/login" method="POST">
+    <h2> Register</h2>
+    <form action="/register" method="POST">
         <div class="form-group">
           <label for="InputEmail" class="form-check-label">Username</label>
           <input 
@@ -13,7 +13,7 @@
             id="username"
             name="username" 
             aria-describedby="emailHelp" 
-            placeholder="Username">
+            placeholder="Enter Username">
           
         </div>
         <div class="form-group">
@@ -23,12 +23,12 @@
           class="form-control" 
           id="password" 
           name="password"
-          placeholder="Password">
+          placeholder="Enter Password">
           <div class="etc-login-form">
-            <p >Don't have an account? <a href="/register"> Register here</a></p>
-          </div>
+            <p> Already have an account? <a href="/login">Login here</a></p>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
   
           </div>
       </form>
