--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -1,34 +1,34 @@
 <%- include ('../partials/header') %>
 <%- include ('../pages/menu_navbar') %>
+<!-- <head>
+  <link rel="stylesheet" href="../css/login.css">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <title>Sign in</title>
+</head> -->
+<%- include ('style') %>
 <main>
-  <div class="container">
+
+  <div class="login-form">
     <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-    <h2> Login</h2>
+    
     <form action="/login" method="POST">
-        <div class="form-group">
-          <label for="InputEmail" class="form-check-label" >Username</label>
-          <input 
-            type="username" 
-            class="form-control" 
-            id="username"
-            name="username" 
-            aria-describedby="emailHelp" 
-            placeholder="Username">
+      <h1 style="text-align:center;"> Login</h1>
+        <div class="content">
+          <div class="input-field">
+            <input type="email" placeholder="Username" autocomplete="nope">
+          </div>
           
         </div>
-        <div class="form-group">
-          <label for="InputUsername" class="form-label">Password</label>
-          <input 
-          type="password" 
-          class="form-control" 
-          id="password" 
-          name="password"
-          placeholder="Password">
-          <div class="etc-login-form">
-            <p >Don't have an account? <a href="/register"> Register here</a></p>
+        <div class="content">
+          <div class="input-field">
+            <input type="password" placeholder="Password" autocomplete="new-password">
           </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+          <div>
+          <a href="/register" class="link"> Don't have an account? Register here</a>
+          </div>
+        <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; width:100px">Login</button>
   
           </div>
       </form>
