--- a/application/views/pages/menu_navbar.ejs
+++ b/application/views/pages/menu_navbar.ejs
@@ -27,9 +27,9 @@
               <a class="nav-link" href="/preferences">Preferences</a>
             </li>
           </ul>
-          <div class="nav-item me-1">
+          <div class="navbar-nav me-auto">
           <a class="nav-link" href="/logout">Logout</a>
-          <img src="../resources/img/rightIcon.jpg" alt="" style="width: 30px;">
+          <!-- <img src="../resources/img/rightIcon.jpg" alt="" style="width: 30px;"> -->
         </div>
       </div>
     </div>
