--- a/application/views/pages/register.ejs
+++ b/application/views/pages/register.ejs
@@ -1,34 +1,28 @@
 <%- include ('../partials/header') %>
 <%- include ('../pages/menu_navbar') %>
+<%- include ('style') %>
 <main>
-  <div class="container">
+  <div class="login-form">
     <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-    <h2> Register</h2>
+    
     <form action="/register" method="POST">
-        <div class="form-group">
-          <label for="InputEmail" class="form-check-label">Username</label>
-          <input 
-            type="username" 
-            class="form-control" 
-            id="username"
-            name="username" 
-            aria-describedby="emailHelp" 
-            placeholder="Enter Username">
+      <h1 style="text-align:center;"> Register</h1>
+        <div class="content">
+          <div class="input-field">
+            <input type="email" placeholder="Username" autocomplete="nope">
+          </div>
+         
           
         </div>
-        <div class="form-group">
-          <label for="InputUsername" class="form-label">Password</label>
-          <input 
-          type="password" 
-          class="form-control" 
-          id="password" 
-          name="password"
-          placeholder="Enter Password">
-          <div class="etc-login-form">
-            <p> Already have an account? <a href="/login">Login here</a></p>
+
+          <div class="content">
+            <div class="input-field">
+              <input type="password" placeholder="Password" autocomplete="new-password">
+            </div>
+            <div>
+             <a href="/login" class = "link">Already have an account? Login here</a>
         </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; width:100px">Register</button>
   
           </div>
       </form>
