tweak for message error

--- a/application/views/pages/register.ejs
+++ b/application/views/pages/register.ejs
@@ -3,7 +3,8 @@
 <main>
   <div class="container">
     <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-    <%- include ('../partials/message') %>
+    <!-- message is not part of files, can either add message or leave commented -->
+    <!-- <%- include ('../partials/message') %> -->
     <h2>Register</h2>
     <form action="/register" method="post">
       <table class="table">
