fixed node modukes & buttons changed for profile page

--- a/application/views/pages/Profile.ejs
+++ b/application/views/pages/Profile.ejs
@@ -1,5 +1,6 @@
 <%- include ('../partials/header') %>
 <%- include ('../pages/menu_navbar') %>
+<%- include ('style') %>
 <main>
 
   <div class="container">
@@ -69,10 +70,10 @@
         </tr>
         <tr>
             <th>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#changeUsername">Change username</button>
+                <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; ">Change username</button>
             </th>
             <th>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#changePassword">Change Password</button>
+                <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px;">Change Password</button>
             </th>
         </tr>
     </table>
