--- a/application/views/pages/menu_navbar.ejs
+++ b/application/views/pages/menu_navbar.ejs
@@ -1,4 +1,5 @@
 <header>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <nav class="navbar navbar-expand-sm border-bottom">
       <div class="container">
         <button
@@ -11,10 +12,24 @@
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
+        <div class="w3-bar w3-light-grey">
+          <span class="align-left">
+          <a class="w3-bar-item w3-button" style="display:inline-block;width:400px;text-align:left" href="/home">Home</a>
+          </span>
+          <a class="w3-bar-item w3-button w3-mobile" href="/workout">Workout Plan</a>
+          <a class="w3-bar-item w3-button w3-mobile"  href="/preferences">Preferences</a>
+          <a class="w3-bar-item w3-button w3-mobile"  href="/profile">Profile</a>
+          <a class="w3-bar-item w3-button w3-right" href="/login">Log in</a>
+          <a class="w3-bar-item w3-button w3-right" href="/register">Sign up</a>
+          <a class="w3-bar-item w3-button w3-right" href="/logout">Logout</a>
+        </div>
+        <!-- <div>
+          
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/home">Home</a>
+              <a class="nav-link w3-left" href="/home">Home</a>
             </li>
           </ul>
           <ul class="navbar-nav me-auto">
@@ -32,11 +47,21 @@
               <a class="nav-link" href="/profile">Profile</a>
             </li>
           </ul>
-          <div class="nav-item me-1">
-          <a class="nav-link" href="/logout">Logout</a>
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item w3-right">
+              <a class="nav-link" style="padding: 80%" href="/login">Log in</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link w3-right" style="padding: 80%" href="/register">Sign up</a>
+            </li>
+          </ul>
+          <div class="nav-item w3-right">
+          <a class="nav-link w3-right" style="padding: 80%" hred="/logout">Logout</a> -->
           <!-- <img src="../resources/img/rightIcon.jpg" alt="" style="width: 30px;"> -->
-        </div>
+        <!-- </div>
       </div>
-    </div>
+    </div> -->
   </nav>
 </header>
