update register button submission

--- a/application/views/pages/register.ejs
+++ b/application/views/pages/register.ejs
@@ -22,7 +22,7 @@
             <div>
              <a href="/login" class = "link">Already have an account? Login here</a>
         </div>
-        <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; width:100px">Register</button>
+        <button type="submit" class="btn btn-primary" style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; width:100px">Register</button>
   
           </div>
       </form>
