register and login pages fixed

--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -17,13 +17,13 @@
       <h1 style="text-align:center;"> Login</h1>
         <div class="content">
           <div class="input-field">
-            <input type="email" placeholder="Username" autocomplete="nope">
+            <input name="username" type="text" placeholder="Username" autocomplete="nope">
           </div>
           
         </div>
         <div class="content">
           <div class="input-field">
-            <input type="password" placeholder="Password" autocomplete="new-password">
+            <input name="password" type="password" placeholder="Password" autocomplete="new-password">
           </div>
           <div>
           <a href="/register" class="link"> Don't have an account? Register here</a>
