--- a/application/views/pages/register.ejs
+++ b/application/views/pages/register.ejs
@@ -9,15 +9,13 @@
       <h1 style="text-align:center;"> Register</h1>
         <div class="content">
           <div class="input-field">
-            <input type="email" placeholder="Username" autocomplete="nope">
+            <input name="username" type="text" placeholder="Username" autocomplete="nope">
           </div>
-         
-          
         </div>
 
           <div class="content">
             <div class="input-field">
-              <input type="password" placeholder="Password" autocomplete="new-password">
+              <input name="password" type="password" placeholder="Password" autocomplete="new-password">
             </div>
             <div>
              <a href="/login" class = "link">Already have an account? Login here</a>
