fixed register and login pages

--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -17,7 +17,7 @@
       <h1 style="text-align:center;"> Login</h1>
         <div class="content">
           <div class="input-field">
-            <input type="username" placeholder="Username" autocomplete="nope">
+            <input name = "username"type="username" placeholder="Username" autocomplete="nope">
           </div>
           
         </div>
