add button on home

--- a/application/views/pages/home.ejs
+++ b/application/views/pages/home.ejs
@@ -24,7 +24,7 @@
            <% }) %>
   
           </select>
-          <button type="button" class="btn btn-primary">add</button>
+          <button type="button" class="btn btn-primary">Add</button>
   
 
           <table class="table">
