--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -17,13 +17,13 @@
       <h1 style="text-align:center;"> Login</h1>
         <div class="content">
           <div class="input-field">
-            <input type="username" placeholder="Username" autocomplete="nope">
+            <input type="username" placeholder="Username" autocomplete="nope" name="username" id="username">
           </div>
           
         </div> 
         <div class="content">
           <div class="input-field">
-            <input name="password" type="password" placeholder="Password" autocomplete="new-password">
+            <input name="password" type="password" placeholder="Password" autocomplete="new-password" id="password">
           </div>
           <div>
           <a href="/register" class="link"> Don't have an account? Register here</a>
