fixed the login redirecting and the syntax in insert.sql file

--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -17,18 +17,18 @@
       <h1 style="text-align:center;"> Login</h1>
         <div class="content">
           <div class="input-field">
-            <input type="username" placeholder="Username" autocomplete="nope">
+            <input type="username" placeholder="Username" autocomplete="nope" name="username" id="username">
           </div>
           
         </div> 
         <div class="content">
           <div class="input-field">
-            <input name="password" type="password" placeholder="Password" autocomplete="new-password">
+            <input name="password" type="password" placeholder="Password" autocomplete="new-password" id="password">
           </div>
           <div>
           <a href="/register" class="link"> Don't have an account? Register here</a>
           </div>
-        <button background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; width:100px">Login</button>
+        <button type="submit" class="btn btn-primary"style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; width:100px">Login</button>
   
           </div>
       </form>
