fixed login, register and profile pages
added messages to all the pages
fixed all the problems with the pages, and deleted the nav-bar from the login and the register pages, because it was allowing the user to load the home page without signing in to the website

--- a/application/views/pages/Profile.ejs
+++ b/application/views/pages/Profile.ejs
@@ -64,14 +64,14 @@
             <th> Username: </th>
             <th> <%= username %></th>
             <th>
-                <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; ">Change username</button>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#changeUsername" style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px; ">Change username</button>
             </th>
         </tr>
         <tr>
             <th> Password: </th>
             <th> ********  </th>
             <th>
-              <button style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px;">Change Password</button>
+              <button type="button" data-bs-toggle="modal" data-bs-target="#changePassword" style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 20px;">Change Password</button>
           </th>
         </tr>
     </table>
