--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -1,5 +1,5 @@
 <%- include ('../partials/header') %>
-<%- include ('../pages/menu_navbar') %>
+
 <!-- <head>
   <link rel="stylesheet" href="../css/login.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -9,7 +9,7 @@
 </head> -->
 <%- include ('style') %>
 <main>
-
+  <div class="col"><%- include ('../partials/message') %></div>
   <div class="login-form"> 
     <!-- THE REST OF YOUR HTML CODE GOES HERE -->
     
