--- a/application/views/pages/register.ejs
+++ b/application/views/pages/register.ejs
@@ -1,7 +1,7 @@
 <%- include ('../partials/header') %>
-<%- include ('../pages/menu_navbar') %>
 <%- include ('style') %>
 <main>
+  <div class="col"><%- include ('../partials/message') %></div>
   <div class="login-form">
     <!-- THE REST OF YOUR HTML CODE GOES HERE -->
     
