login and register pages fixed

--- a/application/views/pages/login.ejs
+++ b/application/views/pages/login.ejs
@@ -17,7 +17,7 @@
       <h1 style="text-align:center;"> Login</h1>
         <div class="content">
           <div class="input-field">
-            <input type="username" placeholder="Username" autocomplete="nope" name="username" id="username">
+            <input type="text" placeholder="Username" autocomplete="nope" name="username" id="username">
           </div>
           
         </div> 
