--- a/application/views/pages/menu_navbar.ejs
+++ b/application/views/pages/menu_navbar.ejs
@@ -1,5 +1,7 @@
 <header>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
     <nav class="navbar navbar-expand-sm border-bottom">
       <div class="container">
         <button
@@ -14,9 +16,11 @@
         </button>
 
         <div class="w3-bar w3-light-grey">
-          <span class="align-left">
-          <a class="w3-bar-item w3-button" style="display:inline-block;width:400px;text-align:left" href="/home">Home</a>
-          </span>
+          <!-- <a class="d-flex" style = "text-align: left;">
+            <img src="/application/resources/img/dumbell-fitness-svgrepo-com.svg" width="30" height="24">
+        </a> -->
+          <a class="w3-bar-item w3-button" style="display:inline-block;width:400px;text-align:left;" href="/home">Home</a>
+    
           <a class="w3-bar-item w3-button w3-mobile" href="/workout">Workout Plan</a>
           <a class="w3-bar-item w3-button w3-mobile"  href="/preferences">Preferences</a>
           <a class="w3-bar-item w3-button w3-mobile"  href="/profile">Profile</a>
