updated home page

--- a/application/views/pages/home.ejs
+++ b/application/views/pages/home.ejs
@@ -5,31 +5,35 @@
     <main>
         <div class="container" >
           <!-- THE REST OF YOUR HTML CODE GOES HERE -->
+          <div class="col"><%- include ('../partials/message') %></div>
           <h1><centre>Workouts for this Week</centre></h1>
 <table>
 <tr>
             <td>
-              <select class="form-select" aria-label="Default select example">
+              <select name="day_name" class="form-select" aria-label="Default select example" required>
             <option selected>Day</option>
-            <option value="1">Monday</option>
-            <option value="2">Tueday</option>
-            <option value="3">Wednesday</option>
-            <option value="4">Thurday</option>
-            <option value="6">Friday</option>
-            <option value="7">Saturday</option>
+            <option value="Sunday">Sunday</option>
+            <option value="Monday">Monday</option>
+            <option value="Tuesday">Tuesday</option>
+            <option value="Wednesday">Wednesday</option>
+            <option value="Thursday">Thursday</option>
+            <option value="Friday">Friday</option>
+            <option value="Saturday">Saturday</option>
           </select>
           </td>
+          <form action="/home/add" method="post">
           <td>
-          <select class="form-select" aria-label="Default select example">
+          <select class="form-select" aria-label="Default select example" required>
             <option selected>Select Exercise</option>
-            <% data.forEach((name, index) => { %>
-              <option value="<%=index %>" ><%-name.exercise_name%></option>
+            <% exercises.forEach((exercise) => { %>
+              <option value='<%- exercise.exercise_id %>' ><%- exercise.exercise_name %></option>
            <% }) %>          
           </select>
             </td>
             <td>
               <button type="submit" class="btn btn-primary"style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 15px; width:80px">add</button>
             </td>
+          </form>
           </tr>
 </table>
   
