--- a/application/views/pages/home.ejs
+++ b/application/views/pages/home.ejs
@@ -28,7 +28,7 @@
           </select>
             </td>
             <td>
-              <button type="submit" class="btn btn-primary"style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 15px; width:80px">add</button>
+              <button type="submit" class="btn btn-primary"style="background-color:#d4e7fc;color:#3c3c3c;display:block; border-radius: 6px;font-size: 15px; width:80px">add</button>
             </td>
           </tr>
 </table>
@@ -118,7 +118,7 @@
           </select>
             </td>
           <td>
-            <button type="submit" class="btn btn-primary"style="background:snow;color:grey;display:block; border-radius: 6px;font-size: 15px; width:100px">remove</button>
+            <button type="submit" class="btn btn-primary"style="background-color:#d4e7fc;color:#3c3c3c;display:block; border-radius: 6px;font-size: 15px; width:100px">remove</button>
           </td>
           
             </tr>
