--- a/application/views/pages/home.ejs
+++ b/application/views/pages/home.ejs
@@ -31,7 +31,7 @@
           </select>
             </td>
             <td>
-              <button type="submit" class="btn btn-primary"style="background-color:#d4e7fc;color:#3c3c3c;display:block; border-radius: 6px;font-size: 15px; width:80px">add</button>
+              <button type="submit" class="btn btn-primary"style="background-color:#d4e7fc;color:#3c3c3c;display:block; border-radius: 6px;font-size: 15px; width:80px" onclick="alertSomething('added!')">add</button>
             </td>
           </form>
           </tr>
@@ -124,7 +124,7 @@
           </select>
             </td>
           <td>
-            <button type="submit" class="btn btn-primary"style="background-color:#d4e7fc;color:#3c3c3c;display:block; border-radius: 6px;font-size: 15px; width:100px">remove</button>
+            <button type="submit" class="btn btn-primary"style="background-color:#d4e7fc;color:#3c3c3c;display:block; border-radius: 6px;font-size: 15px; width:100px" onclick="alertSomething('remove')">remove</button>
           </td>
           </form>
             </tr>
