Added Favicon for Browser

--- a/application/views/partials/header.ejs
+++ b/application/views/partials/header.ejs
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <title>Fitness Journey</title>
+    <!-- add icon link -->
+    <link rel = "icon" href = 
+    "https://lh3.googleusercontent.com/drive-viewer/AJc5JmTQNF8Q7nl3VRwyftfoIjDZ9pgxlGo-tmC1gm7_Id6aDU0xfDtlc5Xn0FCIGrZ1xkJGTkL-mBnKtmY8_Fl4FXs2Te6FzA=w1440-h764" 
+            type = "image/x-icon">
     <!-- TO-DO: Add the <link> tag to include bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script defer
